Advanced Reboot + Fixs (Squashed) * SystemUI: Add global reboot option -CAF * AdvancedReboot: Add advanced reboot options -CM * AdvancedReboot: Enhance power menu reboot option -CM * ShutdownThread: Fix longpress power for safemode -EuphoriaOS * ShutdownThread: Enable advanced reboot by default -Beanstown106 * AdvancedReboot: Enable Via overlay instead of Setting -Beanstown106 * AdvancedReboot: adapted to work on android marshmallow -Beanstown106 * AdvancedReboot: Remove keyguard restrictions on advanced reboot -Beanstown106 * AdvancedReboot: Remove and cleanup duplicate strings -Beanstown106 99% of people who flash roms want advanced reboot their was no need for it to be a setting
Edited and squashed By:@BeansTown106

Signed-off-by: Sagar Shah <sagarshah2326@gmail.com>

--- a/core/res/res/drawable/ic_lock_power_reboot.xml
+++ b/core/res/res/drawable/ic_lock_power_reboot.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2017 Cosmic-OS Project
+     Copyright (C) 2016 The Pure Nexus Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,15 +14,6 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- The list of components which should be automatically disabled. -->
-    <string-array name="config_disabledComponents" translatable="false">
-    </string-array>
-
-    <!-- The list of components which should be forced to be enabled. -->
-    <string-array name="config_forceEnabledComponents" translatable="false">
-    </string-array>
-
-    <!-- Is Advanced Reboot enabled? -->
-    <bool name="config_advanced_reboot">true</bool>
-</resources>
+<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
+    android:src="@drawable/ic_lock_power_reboot_alpha"
+    android:tint="?attr/colorControlNormal" />
