SystemUI: bring back showPercentLowOnly for Nougat (1/2)
Forward ported a squash of my show Percent when low only commits

@nathanchance edit: enabled by default along with the show percent inside icon.

Change-Id: I105f774d1e8af7e3053fb2a807b382d971e70f9b

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -74,4 +74,7 @@
     <!-- Wether doze feature is enabled by default in settings. -->
     <bool name="config_doze_enabled_by_default">true</bool>
 
+    <!-- Battery level for when "show battery percent only on low battery" is enabled -->
+    <integer name="config_batteryPercentLowOnlyLevel">25</integer>
+
 </resources>
