--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -126,4 +126,7 @@
   <!-- Doze mode -->
   <java-symbol type="bool" name="config_doze_enabled_by_default" />
 
+  <!-- Show battery percent only when battery is low -->
+  <java-symbol type="integer" name="config_batteryPercentLowOnlyLevel" />
+
 </resources>
