BatteryService: add dash charging support
*and make it work along with lockscreen charging info commit

Change-Id: I337feabf26ebdca100b651dcf492cc78b4fede74
Signed-off-by: thecrazyskull <anaskarbila@aospa.co>

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -74,4 +74,6 @@
     <!-- Battery level for when "show battery percent only on low battery" is enabled -->
     <integer name="config_batteryPercentLowOnlyLevel">20</integer>
 
+    <!-- Whether device has dash charging support -->
+    <bool name="config_hasDashCharger">false</bool>
 </resources>
