--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -68,6 +68,10 @@
   <java-symbol type="string" name="global_action_search" />
   <java-symbol type="string" name="global_action_torch" />
   <java-symbol type="string" name="global_action_voicesearch" />
+  <!-- Power menu animations -->
+  <java-symbol type="style" name="GlobalActionsAnimation" />
+  <java-symbol type="style" name="GlobalActionsAnimationTop" />
+  <java-symbol type="style" name="GlobalActionsAnimationEnter" />
 
   <!-- ADB notification -->
   <java-symbol type="string" name="adb_net_active_notification_title" />
