--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -47,6 +47,17 @@
         android:orientation="horizontal"
         >
 
+    <ImageView
+            android:id="@+id/left_cosmic_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="2dip"
+            android:paddingEnd="4dip"
+            android:src="@drawable/ic_status_bar_cosmic_logo"
+            android:scaleType="center"
+            android:visibility="gone"
+            />
+ 
         <!-- The alpha of this area is controlled from both PhoneStatusBarTransitions and
              PhoneStatusBar (DISABLE_NOTIFICATION_ICONS). -->
         <com.android.systemui.statusbar.AlphaOptimizedFrameLayout
@@ -70,6 +81,17 @@
                 android:fontFamily="sans-serif-condensed"
                 android:gravity="right|center_vertical"/>
 
+             <ImageView
+                android:id="@+id/cosmic_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="2dip"
+                android:paddingEnd="4dip"
+                android:src="@drawable/ic_status_bar_cosmic_logo"
+                android:scaleType="center"
+                android:visibility="gone"
+					/>
+
             <include layout="@layout/system_icons" />
 
             <com.android.systemui.BatteryLevelTextView android:id="@+id/battery_level"
@@ -89,6 +111,16 @@
                 android:paddingStart="@dimen/status_bar_clock_starting_padding"
                 android:paddingEnd="@dimen/status_bar_clock_end_padding"
                 android:gravity="center_vertical|start"
+                />
+           <ImageView
+                android:id="@+id/right_cosmic_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="4dp"
+                android:paddingEnd="1dp"
+                android:src="@drawable/ic_status_bar_cosmic_logo"
+                android:scaleType="center"
+                android:visibility="gone"
                 />
         </com.android.keyguard.AlphaOptimizedLinearLayout>
     </LinearLayout>
