--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -133,6 +133,6 @@
     <string name="accessibility_quick_settings_sync_changed_on">Sync turned on</string>
 
     <!-- Heads up snooze toast -->
-    <string name="heads_up_snooze_message_one_minute">Heads up is snoozing for 1 minute.</string>
-    <string name="heads_up_snooze_message">Heads up is snoozing for <xliff:g id="number">%d</xliff:g> minutes.</string>
+    <string name="heads_up_snooze_message_one_minute">Peeking notification from <xliff:g id="string">%s</xliff:g> are snoozing for 1 minute.</string>
+    <string name="heads_up_snooze_message">Peeking notification from <xliff:g id="string">%s</xliff:g> are snoozing for <xliff:g id="number">%d</xliff:g> minutes.</string>
 </resources>
