QS tile titles visibility [1/2]
Pretty simple mod to remove tile titles if and when the titles become
something that you don't want. A good case for this is if you set 7 or more
columns across, the titles move down to 2 lines and is just looks awful IMO

Before - https://i.imgur.com/G3ICaqb.png
After - https://i.imgur.com/Hb0J1XW.png

PS2 - Thanks to @maxwen for the know how to adjust the gap when titles
are removed

Change-Id: I10c534c5383397ce777f3ab0bdc0fa82fad6a7e1

--- a/packages/SystemUI/res/values/custom_dimens.xml
+++ b/packages/SystemUI/res/values/custom_dimens.xml
@@ -31,4 +31,8 @@
     <dimen name="phone_bottom_padding">40dp</dimen>
     <dimen name="phone_width">320dp</dimen>
     <dimen name="phone_height">420dp</dimen>
+
+    <!-- QS title visibility -->
+    <dimen name="qs_tile_height_wo_label">48dp</dimen>
+
 </resources>
