--- a/packages/SystemUI/res/values/custom_dimens.xml
+++ b/packages/SystemUI/res/values/custom_dimens.xml
@@ -49,4 +49,7 @@
     <!-- Membar spacing -->
     <dimen name="recents_membar_spacing">12dp</dimen>
 
+    <!-- QS scroller -->
+    <dimen name="qs_scroller_margin">12dp</dimen>
+
 </resources>
