StatusBar Custom Logos: Bring Them Back [1/2] - Use a Much Cleaner Implementation without RecreateStatusbar() - Dont Push Too much crap in layout - Adapt for Cosmic-OS
Signed-off-by: Sagar Shah <sagarshah2326@gmail.com>

--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -58,6 +58,8 @@
             android:visibility="gone"
             />
  
+        <include layout="@layout/custom_icons" />
+
         <!-- The alpha of this area is controlled from both PhoneStatusBarTransitions and
              PhoneStatusBar (DISABLE_NOTIFICATION_ICONS). -->
         <com.android.systemui.statusbar.AlphaOptimizedFrameLayout
