OmniJaws: Expose temperature text in DetailedWeatherView
This will allow themers to invert the text if they want (like Belo)

Signed-off-by: Nathan Chancellor <natechancellor@gmail.com>

--- a/packages/SystemUI/res/values/custom_colors.xml
+++ b/packages/SystemUI/res/values/custom_colors.xml
@@ -45,4 +45,7 @@
     <!-- Battery charging color -->
     <color name="system_primary_color">@*android:color/material_blue_grey_900</color>
 
+    <!-- OmniJaws detailed view temperature text -->
+    <color name="omni_jaws_detailed_temperature_color">@android:color/white</color>
+
 </resources>
