--- a/packages/SystemUI/res/values/custom_colors.xml
+++ b/packages/SystemUI/res/values/custom_colors.xml
@@ -39,8 +39,9 @@
     <color name="fab_color">@*android:color/material_deep_teal_500</color>
     <color name="floating_action_button_icon_color">#ffffff</color>
 
-    <!-- Status bar battery level text color -->
+    <!-- Status bar battery colors -->
     <color name="status_bar_battery_level_text_color">#ffffff</color>
+    <color name="batterymeter_frame_color_darkintensity">@color/dark_mode_icon_color_dual_tone_background</color>
 
     <!-- Battery charging color -->
     <color name="system_primary_color">@*android:color/material_blue_grey_900</color>
