Prepare for Cosmic-OS
Squashed commit of the following:

    Revert "Advanced Reboot + Fixs (Squashed)"

    This reverts commit 2d290c18ca738a02a130b8e45f9b1a345ba8caf4.

    Revert "Power menu customizations [1/2]"

    This reverts commit 545a69dfa98f667b06a4f75cedda46b954d21e51.

    Revert "GlobalActions: Always add power off option to power menu"

    This reverts commit 574487244af4a0dedf2b122c97cf7b33742063fd.

    Revert "GlobalActions: Use circular user avatars"

    This reverts commit 920487e95e5a8380e9b6dcc1fcdffbbfc9e7f6e1.

    Revert "Powermenu Torch option [1/2]"

    This reverts commit bb4531731545009aac7f994807aca7994542e400.

    Revert "Forward Port ScreenRecorder from 4.4 (Squashed)"

    This reverts commit 14e97c403f4f28c93799f042450ee5116e358c3e.

    Revert "Implement expanded desktop feature"

    This reverts commit ce07ac2dcff8c0f5e3d86569908b12eb86cef1cd.

    Revert "bring back screen record shortcut"

    This reverts commit 021ba8a4127af6a5fda8d4446524ccee1f903760.

    Revert "[1/3] base: single hand for hardware keys"

    This reverts commit 91c2ffcbd6530f5d8e2b5405c6e22b81418355df.

    Revert "wm: Add support for split screen button behavior"

    This reverts commit 4fbff200ef90f83469cd2389eec3702cf835357b.

    Revert "SystemUI: make long pressing recent switch to last app"

    This reverts commit 7c09cf85c35a1c32a97672c50b0eb484241e7719.

    Revert "Framework: Forward port Long press back to kill app (2/2)"

    This reverts commit 13032e03c2686088a4b4c2a2d54d7b6ea05595ec.

    Revert "base: deuglify single hand hint ui"

    This reverts commit af502b6ab8f90acf867cae6b002e10c1d0531b2d.

    Revert "[1/2] base: Add new feature of One-hand UI Mode"

    This reverts commit 99fd49fd78e2f33f58fa72037c914b6df482b743.

    Revert "ambient display: Fix volume key music control"

    This reverts commit a94c155939ccd0f5bd2a4c9b6eedd9209a34f04c.

    Revert "Map long press of MUTE to KEYCODE_MEDIA_PLAY_PAUSE"

    This reverts com

--- a/core/res/res/values/custom_strings.xml
+++ b/core/res/res/values/custom_strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2017 JDCTeam
+     Copyright (C) 2017 Cosmic-OS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,18 +15,8 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Volume stream title names -->
-    <string name="stream_title_call">Call</string>
-    <string name="stream_title_system">System</string>
-    <string name="stream_title_ring">Ring</string>
-    <string name="stream_title_media">Media</string>
-    <string name="stream_title_alarm">Alarm</string>
-    <string name="stream_title_notification">Notification</string>
-    <string name="stream_title_bluetooth">Bluetooth</string>
 
-    <!-- Wi-Fi hotspot label when enabled -->
-    <plurals name="wifi_hotspot_connected_clients_label">
-        <item quantity="one">%1$d client</item>
-        <item quantity="other">%1$d clients</item>
-    </plurals>
+    <string name="permlab_preventpower">Override power key</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_preventpower">Allows an app to override the power key.</string>
 </resources>
