Fix QS edit background for our themes
Change-Id: Ib567ee51d026fb7a26bf53b304201333d958aad4
Signed-off-by: Shubham Singh <coolsks94@gmail.com>

--- a/packages/overlays/SystemBlackThemeOverlay/res/values/colors.xml
+++ b/packages/overlays/SystemBlackThemeOverlay/res/values/colors.xml
@@ -40,4 +40,6 @@
     <color name="notification_snooze_text">@*android:color/theme_text1</color>
     <color name="notification_text_color1">@*android:color/theme_text1</color>
 
+    <!-- QS edit page background color -->
+    <color name="qs_edit_item_decoration_bg">@*android:color/black</color>
 </resources>
