FingerprintKeyHandler: Support single tap gesture (2/2)
Mainly used for navigation inputs, but can be re-assigned

Change-Id: I9c2800e0ce7d4dc6c1d991527afe9ab62484d01c

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -93,6 +93,7 @@
     <java-symbol type="bool" name="config_hasSystemOverlayPath" />
 
     <!-- Fingerprint Gestures Settings -->
+    <java-symbol type="integer" name="config_fpSingleTapKeyCode" />
     <java-symbol type="integer" name="config_fpDoubleTapKeyCode" />
     <java-symbol type="integer" name="config_fpLongpressKeyCode" />
     <java-symbol type="integer" name="config_fpSwipeUpKeyCode" />
@@ -100,6 +101,7 @@
     <java-symbol type="integer" name="config_fpSwipeLeftKeyCode" />
     <java-symbol type="integer" name="config_fpSwipeRightKeyCode" />
 
+    <java-symbol type="integer" name="config_fpSingleTapDefault" />
     <java-symbol type="integer" name="config_fpDoubleTapDefault" />
     <java-symbol type="integer" name="config_fpLongpressDefault" />
     <java-symbol type="integer" name="config_fpSwipeUpDefault" />
